RESOLVED FIXED239667
Web Inspector: Regression(r287684) Resources from the memory cache show empty content in Network, Sources, and Search tabs
https://bugs.webkit.org/show_bug.cgi?id=239667
Summary Web Inspector: Regression(r287684) Resources from the memory cache show empty...
Patrick Angle
Reported 2022-04-22 12:24:44 PDT
Attachments
Patch v1.0 (13.27 KB, patch)
2022-04-22 12:36 PDT, Patrick Angle
no flags
Patrick Angle
Comment 1 2022-04-22 12:36:16 PDT
Created attachment 458163 [details] Patch v1.0
Devin Rousso
Comment 2 2022-04-22 13:02:40 PDT
Comment on attachment 458163 [details] Patch v1.0 r=me, nice digging :)
EWS
Comment 3 2022-04-22 16:20:35 PDT
Committed r293264 (249905@main): <https://commits.webkit.org/249905@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458163 [details].
Note You need to log in before you can comment on or make changes to this bug.